--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     
         <div class="whole">
             <div class="page">
-                <a href="portfolio.html"><button type="button" class="btn btn-outline-warning">Home</button></a>
+                <a href="index.html"><button type="button" class="btn btn-outline-warning">Home</button></a>
             </div>
             <div class="page1">
                 <a href="skills.html"><button type="button" class="btn btn-outline-info">Skills</button></a>
