--- a/skills.html
+++ b/skills.html
@@ -13,7 +13,7 @@
         <div class="whole">
             <div class="butto">
             <div class="page">
-                <a href="portfolio.html"><button type="button" class="btn btn-outline-warning">Home</button></a>
+                <a href="index.html"><button type="button" class="btn btn-outline-warning">Home</button></a>
             </div>
             <div class="page1">
                 <a href="about.html"><button type="button" class="btn btn-outline-danger">About</button></a>
